[gd_scene load_steps=9 format=3 uid="uid://bfbx4h1lccqnn"]

[ext_resource type="Script" path="res://ui/Hud/Hud.gd" id="1_fpogy"]
[ext_resource type="FontFile" uid="uid://bh1jevpgv2aqe" path="res://asset/fonts/PixelOperator8.ttf" id="3_o5w7m"]
[ext_resource type="PackedScene" uid="uid://dlwk4q8jl4cbx" path="res://ui/Hud/time.tscn" id="4_jpst3"]

[sub_resource type="CanvasTexture" id="CanvasTexture_jvsk6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nrydv"]
texture = SubResource("CanvasTexture_jvsk6")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kxoq7"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="Theme_08wx8"]
default_base_scale = 0.5
default_font = ExtResource("3_o5w7m")
default_font_size = 60

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ia0gh"]
bg_color = Color(0.831373, 0.737255, 0.294118, 1)

[node name="Hud" type="Control" groups=["hud"]]
process_mode = 3
z_index = 900
z_as_relative = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fpogy")

[node name="hud" type="CanvasLayer" parent="."]

[node name="hp" type="ProgressBar" parent="hud"]
modulate = Color(1, 0.184861, 0.214292, 1)
offset_left = 19.0
offset_top = 6.0
offset_right = 399.0
offset_bottom = 53.0
theme_override_styles/fill = SubResource("StyleBoxTexture_nrydv")
value = 50.0
show_percentage = false

[node name="hp_text" type="RichTextLabel" parent="hud/hp"]
layout_mode = 0
offset_left = 2.0
offset_top = 9.0
offset_right = 378.0
offset_bottom = 56.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_o5w7m")
theme_override_font_sizes/normal_font_size = 30
text = "100/100"

[node name="card_mana" type="ProgressBar" parent="hud"]
modulate = Color(0.181439, 0.947954, 0, 1)
offset_left = 19.0
offset_top = 67.0
offset_right = 400.0
offset_bottom = 114.0
theme_override_styles/fill = SubResource("StyleBoxFlat_kxoq7")
value = 50.0
show_percentage = false

[node name="card_mana_text" type="RichTextLabel" parent="hud/card_mana"]
layout_mode = 0
offset_left = -1.0
offset_top = 9.0
offset_right = 373.0
offset_bottom = 42.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_o5w7m")
theme_override_font_sizes/normal_font_size = 30
text = "100/100"

[node name="point_ratio" type="RichTextLabel" parent="hud"]
modulate = Color(0.345929, 0.903254, 1, 1)
offset_left = 1591.0
offset_top = 14.0
offset_right = 2247.0
offset_bottom = 118.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/normal_font = ExtResource("3_o5w7m")
theme_override_font_sizes/normal_font_size = 60
text = "得点倍率："

[node name="text" type="RichTextLabel" parent="hud/point_ratio"]
layout_mode = 0
offset_left = 280.0
offset_top = 8.0
offset_right = 626.0
offset_bottom = 86.0
theme = SubResource("Theme_08wx8")
theme_override_fonts/normal_font = ExtResource("3_o5w7m")
text = "0"

[node name="point" type="RichTextLabel" parent="hud"]
modulate = Color(0.345098, 0.901961, 1, 1)
offset_left = 1594.0
offset_top = 71.0
offset_right = 2238.0
offset_bottom = 161.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/normal_font = ExtResource("3_o5w7m")
theme_override_font_sizes/normal_font_size = 60
text = "分数："

[node name="text" type="RichTextLabel" parent="hud/point"]
layout_mode = 0
offset_left = 176.0
offset_top = 18.0
offset_right = 584.0
offset_bottom = 100.0
theme_override_fonts/normal_font = ExtResource("3_o5w7m")
theme_override_font_sizes/normal_font_size = 60
text = "0"

[node name="exp_bar" type="ProgressBar" parent="hud"]
offset_left = 17.0
offset_top = 1048.0
offset_right = 679.0
offset_bottom = 1062.0
rotation = 4.71239
theme_override_styles/fill = SubResource("StyleBoxFlat_ia0gh")
value = 80.0
show_percentage = false

[node name="RichTextLabel" type="RichTextLabel" parent="hud/exp_bar"]
modulate = Color(0.831373, 0.737255, 0.294118, 1)
layout_mode = 0
offset_left = 49.0
offset_top = 24.0
offset_right = 77.0
offset_bottom = 73.0
rotation = 1.5708
scale = Vector2(2, 2)
text = "lev."

[node name="level_number" type="RichTextLabel" parent="hud/exp_bar"]
modulate = Color(0.832836, 0.737421, 0.294243, 1)
layout_mode = 0
offset_left = 49.0001
offset_top = 78.0
offset_right = 77.0001
offset_bottom = 127.0
rotation = 1.5708
scale = Vector2(2, 2)
text = "lev."

[node name="cards" type="Node" parent="hud"]

[node name="card_container" type="HBoxContainer" parent="hud"]
offset_left = 114.0
offset_top = 153.0
offset_right = 2934.0
offset_bottom = 1123.0
scale = Vector2(0.1, 0.1)
alignment = 1

[node name="skill_container" type="HBoxContainer" parent="hud"]
offset_left = 515.0
offset_top = 950.0
offset_right = 8795.0
offset_bottom = 1920.0
scale = Vector2(0.1, 0.1)
alignment = 1

[node name="cp_container" type="HBoxContainer" parent="hud"]
offset_left = 114.0
offset_top = 266.0
offset_right = 2934.0
offset_bottom = 1236.0
scale = Vector2(0.1, 0.1)
alignment = 1

[node name="time" parent="." instance=ExtResource("4_jpst3")]
process_mode = 1

[node name="renew_timer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.2
autostart = true

[connection signal="timeout" from="renew_timer" to="." method="_on_renew_timer_timeout"]
